--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: Hank Quinlan, Horrible Cop
 ---
 
 		<div class="blurb">
-			<h1>Hi there, I'm Hank Quinlan!</h1>
-			<p>Established in 2012, Scuba Diving is a reputed Scuba Diving Tour Agency in Goa. We at Scuba Dive Goa passionately love the sea, train people to dive, we love to travel and explore the world. This helps us to properly organize the dives in Goa, organise new travel programs to the wildest corners of the globe, and launch new training programs. Over the years, diving becomes for us only more interesting and attractive. Scuba diving and traveling for the entire Scuba Dive Goa team is no longer just a form of outdoor activities and sports and not even a lifestyle – it is life itself. We always put and place the interests of our clients above all else – and if our beloved divers and tourists are satisfied, then we worked for good reason.</p>
+			<h1>Scuba Diving in Goa</h1>
+			<p>Established in 2012, Scuba Diving is a reputed <a href="https://scubadivegoa.com/"> Scuba Diving Tour Agency in Goa </a>. We at Scuba Dive Goa passionately love the sea, train people to dive, we love to travel and explore the world. This helps us to properly organize the dives in Goa, organise new travel programs to the wildest corners of the globe, and launch new training programs. Over the years, diving becomes for us only more interesting and attractive. Scuba diving and traveling for the entire Scuba Dive Goa team is no longer just a form of outdoor activities and sports and not even a lifestyle – it is life itself. We always put and place the interests of our clients above all else – and if our beloved divers and tourists are satisfied, then we worked for good reason.</p>
 		</div> 
