--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Scuba Diving in Goa | Guides - Tours and Tips
 ---
 
 		<div class="blurb">
